# pytest-capturewarnings-ng

./: README.md  README.rst  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
docs/: index.md
src/pytest_capture_warnings_ng/: __init__.py  plugin.py
src/pytest_capturewarnings_ng/: plugin.py
tests/: conftest.py  test_capture_warnings_ng.py
